# 2d_engine

./: .gitignore  CMakeLists.txt  Makefile  run_tests.sh
libs/sol/: config.hpp  forward.hpp  sol.hpp
src/: Game.cpp  Game.h  Logger.cpp  Logger.h  Main  Main.cpp
src/AssetStore/: AssetStore.cpp  AssetStore.h
src/Components/: RectCollider.h  RigidBody.h  Sprite.cpp  Sprite.h  SpriteAnimation.h  Transform.cpp  Transform.h
src/ECS/: BaseComponent.cpp  BaseComponent.h  Component.h  ComponentsList.h  ECS.h  Entity.cpp  Entity.h  Registry.cpp  Registry.h  System.cpp  System.h
src/Systems/: AABBCollistionSystem.cpp  AABBCollistionSystem.h  AnimationSystem.cpp  AnimationSystem.h  MovementSystem.cpp  MovementSystem.h  RenderingSystem.cpp  RenderingSystem.h
tests/: AddEntityToSystemsTest.cpp  AnimationSystemTest.cpp  EntityTest.cpp  RegistryTest.cpp
